# cmd/api/main.go
@@ -5,6 +5,8 @@ import (
 	"os"
 	"time"
 
+	"github.com/confluentinc/confluent-kafka-go/v2/kafka"
+	kafka_broker "github.com/viniggjpormade/pormade-email-manager/internal/adapter/broker/kafka"
 	cron_adapter "github.com/viniggjpormade/pormade-email-manager/internal/adapter/delivery/cron"
 	"github.com/viniggjpormade/pormade-email-manager/internal/adapter/repository/postgres"
 	"github.com/viniggjpormade/pormade-email-manager/internal/adapter/storage"
@@ -21,10 +23,6 @@ import (
 // @host            localhost:8000
 // @BasePath        /
 // @schemes         http
-// @tag.name        Auth
-// @tag.description Operações relacionadas a autenticação
-// @tag.name        User
-// @tag.description Operações relacionadas a usuários
 func main() {
 	fmt.Println("\033[32mIniciado em:\033[39m", "\033[33m", time.Now().Format("2006-01-02 15:04:05"), "\033[39m")
 	config.LoadConfig()
@@ -32,9 +30,26 @@ func main() {
 	accountRepo := postgres.NewAccountRepository(db)
 	emailRepo := postgres.NewEmailRepository(db)
 
-	storagePath := os.Getenv("STORAGE_PATH")
-	storageProvider := storage.NewLocalStorage(storagePath)
-	verifyInboxUseCase := email.NewVerifyAndSaveInboxUseCase(emailRepo, storageProvider)
+	storageProvider := storage.NewLocalStorage("./uploads")
+
+	kafkaConfig := &kafka.ConfigMap{
+		"bootstrap.servers": os.Getenv("KAFKA_SERVERS"),
+		"client.id":         os.Getenv("KAFKA_CLIENT_ID"),
+		"acks":              "1",
+		// "enable.idempotence":                    true,
+		"retries":                               2147483647,
+		"reconnect.backoff.ms":                  30000,
+		"max.in.flight.requests.per.connection": 1,
+		"linger.ms":                             5,
+		"batch.num.messages":                    10000,
+		"reconnect.backoff.max.ms":              30000,
+	}
+	kafkaBroker, err := kafka_broker.NewKafkaBroker(kafkaConfig)
+	if err != nil {
+		fmt.Printf("Aviso: Falha ao iniciar Kafka Broker: %v\n", err)
+	}
+
+	verifyInboxUseCase := email.NewVerifyAndSaveInboxUseCase(emailRepo, storageProvider, kafkaBroker)
 
 	emailJobs := cron_adapter.NewEmailJobs(verifyInboxUseCase, accountRepo)
 
