# docs/swagger.yaml
@@ -124,8 +124,3 @@ paths:
 schemes:
 - http
 swagger: "2.0"
-tags:
-- description: Operações relacionadas a autenticação
-  name: Auth
-- description: Operações relacionadas a usuários
-  name: User
